--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="about-content">
                 <img src="./images/profile.png" class="profile-img" alt="profile">
                 <div class="info">
-                    <p class="intro01">Hello!</p>
+                    <p class="intro01">Hello!!</p>
                     <p class="intro01">I'm <b>Kristine Rein</b></p>
                     <h1 class="intro02">I’m a Web Designer</h1>
                     <p  class="intro03">Based in Philippines</p>
