--- a/index.html
+++ b/index.html
@@ -46,37 +46,74 @@
     <div class="title-project">
         <img class="bg-line01" src="./images/bg line.png" alt="">
         <div class="project">
-            <h1 class="title01">Projects</h1>
+                <h1 class="title01">Projects</h1>
                 <div class="proj-des">
                     <div class="project-info">
-                        <img src="./images/1- Kuyabu Trading-01.png" class="proj01" alt="my project">
-                        <img src="./images/2- Kuyabu Trading-02.png" class="proj02" alt="my project">
+                        <div class="proj-cont">
+                            <img src="./images/1- Kuyabu Trading-01.png" class="proj01" alt="my project">
+                            <img src="./images/2- Kuyabu Trading-02.png" class="proj02" alt="my project">
+                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                        </div>
+                        <div class="proj-cont">
+                            <img src="./images/6-beemoon.png" class="proj01" alt="my project">
+                            <img src="./images/6-beemoon-1.png" class="proj02" alt="my project">
+                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                        </div>
+                        <div class="proj-cont">
+                            <img src="./images/4-artisan.co.ltd.png" class="proj01" alt="my project">
+                            <img src="./images/4-artisan.co.ltd-1.png " class="proj02" alt="my project">
+                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                        </div>
+                        <div class="proj-cont">
+                            <img src="./images/8-bridge next.png" class="proj01" alt="my project">
+                            <img src="./images/8-bridge next-1.png.png" class="proj02" alt="my project">
+                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                        </div>
+                        <div class="proj-cont">
+                            <img src="./images/2-SUBPAGE ONLY (Beauty studio melia).png" class="proj01" alt="my project">
+                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                        </div>
+                        <div class="proj-cont">
+                            <img src="./images/9.png" class="proj01" alt="my project">
+                            <img src="./images/10.png" class="proj02" alt="my project">
+                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                        </div>
                     </div>
-                        <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                 </div>
+
+                <!------- Pagination ------->
+                <div id="pagination"></div>
+                <!-- end -->
+
         </div>
     </div>
     
-    <!------- Pagination ------->
-    <div id="pagination"></div>
-    <!-- end -->
+    
         <div class="title-project">
             <img class="bg-line02" src="./images/bg line.png" alt="">
             <div class="personal-proj">
                 <h1 class="title01">Personal Projects</h1>
-                    <div class="personal-proj-des">
+                    <div class="proj-des">
                         <div class="personal-project-info">
-                            <img src="./images/1-business gear solutions.png" class="per-proj01" alt="my project">
-                            <img src="./images/2-business gear solutions.png" class="per-proj02" alt="my project">
+                            <div class="project-info">
+                                <div class="proj-cont">
+                                    <img src="./images/1- Kuyabu Trading-01.png" class="proj01" alt="my project">
+                                    <img src="./images/2- Kuyabu Trading-02.png" class="proj02" alt="my project">
+                                    <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                </div>
+                                <div class="proj-cont">
+                                    <img src="./images/6-beemoon-1.png" class="proj01" alt="my project">
+                                    <img src="./images/6-beemoon.png" class="proj02" alt="my project">
+                                    <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                </div>
+                            </div>
                         </div>
-                            <p class="p-des01">This is a Landing Page Project Design that is made for IT Company.</p>
+                            <!------- Pagination ------->
+                            <div id="pagination"></div>
+                            <!-- end -->
                     </div>
             </div>
         </div>
-
-        <!------- Pagination ------->
-        <div id="pagination"></div>
-        <!-- end -->
 
         <div class="title-project">
             <img class="bg-line03" src="./images/bg line.png" alt="">
