--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="about-content">
                 <img src="./images/profile.png" class="profile-img" alt="profile">
                 <div class="info">
-                    <p class="intro01">Hello!!</p>
+                    <p class="intro01">Hello!</p>
                     <p class="intro01">I'm <b>Kristine Rein</b></p>
                     <h1 class="intro02">I’m a Web Designer</h1>
                     <p  class="intro03">Based in Philippines</p>
@@ -134,7 +134,7 @@
             <div class="contact">
                 <h1 class="contact-title">Contact</h1>
                 <img class="bg-line04" src="./images/bg line-white.png.png" alt="">
-                <p class="contact-text" >Find out more about me and get in touch!!</p>
+                <p class="contact-text" >Find out more about me and get in touch!</p>
                     <div class="contact-des">
                         <a href="#" class="contact-info"><i class="fa fa-envelope" aria-hidden="true" style="color: #fff;"></i>reinpalaroan7@gmail.com</a>
                         <a href="#" class="contact-info"><i class="fa fa-mobile" aria-hidden="true"></i>+63 981 173 1529</a>
