--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                         </div>
                         <div class="proj-cont">
                             <img src="./images/8-bridge next.png" class="proj01" alt="my project">
-                            <img src="./images/8-bridge next-1.png.png" class="proj02" alt="my project">
+                            <img src="./images/8-bridge next-1.png" class="proj02" alt="my project">
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
                         <div class="proj-cont">
-                            <img src="./images/2-SUBPAGE ONLY (Beauty studio melia).png" class="proj01" alt="my project">
+                            <img src="./images/2-SUBPAGE ONLY (Beauty studio melia).png" class="proj03" alt="my project">
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
                         <div class="proj-cont">
