--- a/index.html
+++ b/index.html
@@ -54,40 +54,63 @@
                 <div class="proj-des">
                     <div class="project-info">
                         <div class="proj-cont" >
-                            <img src="./images/1- Kuyabu Trading-01.png" class="image-thumbnail" onclick="openModal()">
-
+                            <img src="./images/01.png" class="image-thumbnail" onclick="openModal()">
                             <div id="imageModal" class="modal" onclick="closeModal()">
                                 <div class="modal-content" onclick="event.stopPropagation()">
                                   <button class="close-btn" onclick="closeModal()">&times;</button>
                                   <img src="./images/1- Kuyabu Trading-01.png" alt="Enlarged Image">
                                 </div>
                               </div>
-
-                            <img src="./images/2- Kuyabu Trading-02.png" class="proj02" alt="my project">
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
-                        <div class="proj-cont">
-                            <img src="./images/6-beemoon.png" class="proj01" alt="my project">
-                            <img src="./images/6-beemoon-1.png" class="proj02" alt="my project">
+                        <div class="proj-cont" >
+                            <img src="./images/02.png" class="image-thumbnail" onclick="openModal()">
+                            <div id="imageModal" class="modal" onclick="closeModal()">
+                                <div class="modal-content" onclick="event.stopPropagation()">
+                                  <button class="close-btn" onclick="closeModal()">&times;</button>
+                                  <img src="./images/8-bridge next.png" alt="Enlarged Image">
+                                </div>
+                              </div>
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
-                        <div class="proj-cont">
-                            <img src="./images/4-artisan.co.ltd.png" class="proj01" alt="my project">
-                            <img src="./images/4-artisan.co.ltd-1.png " class="proj02" alt="my project">
+                        <div class="proj-cont" >
+                            <img src="./images/03.png" class="image-thumbnail" onclick="openModal()">
+                            <div id="imageModal" class="modal" onclick="closeModal()">
+                                <div class="modal-content" onclick="event.stopPropagation()">
+                                  <button class="close-btn" onclick="closeModal()">&times;</button>
+                                  <img src="./images/4-artisan.co.ltd.png" alt="Enlarged Image">
+                                </div>
+                              </div>
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
-                        <div class="proj-cont">
-                            <img src="./images/8-bridge next.png" class="proj01" alt="my project">
-                            <img src="./images/8-bridge next-1.png" class="proj02" alt="my project">
+                        <div class="proj-cont" >
+                            <img src="./images/04.png" class="image-thumbnail" onclick="openModal()">
+                            <div id="imageModal" class="modal" onclick="closeModal()">
+                                <div class="modal-content" onclick="event.stopPropagation()">
+                                  <button class="close-btn" onclick="closeModal()">&times;</button>
+                                  <img src="./images/6-beemoon.png" alt="Enlarged Image">
+                                </div>
+                              </div>
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
-                        <div class="proj-cont">
-                            <img src="./images/2-SUBPAGE ONLY (Beauty studio melia).png" class="proj03" alt="my project">
+                        <div class="proj-cont" >
+                            <img src="./images/05.png" class="image-thumbnail" onclick="openModal()">
+                            <div id="imageModal" class="modal" onclick="closeModal()">
+                                <div class="modal-content" onclick="event.stopPropagation()">
+                                  <button class="close-btn" onclick="closeModal()">&times;</button>
+                                  <img src="./images/2-SUBPAGE ONLY (Beauty studio melia).png" alt="Enlarged Image">
+                                </div>
+                              </div>
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
-                        <div class="proj-cont">
-                            <img src="./images/9.png" class="proj01" alt="my project">
-                            <img src="./images/10.png" class="proj02" alt="my project">
+                        <div class="proj-cont" >
+                            <img src="./images/06.png" class="image-thumbnail" onclick="openModal()">
+                            <div id="imageModal" class="modal" onclick="closeModal()">
+                                <div class="modal-content" onclick="event.stopPropagation()">
+                                  <button class="close-btn" onclick="closeModal()">&times;</button>
+                                  <img src="./images/9.png" alt="Enlarged Image">
+                                </div>
+                              </div>
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
                     </div>
@@ -109,17 +132,46 @@
                         <div class="personal-project-info">
                             <div class="p-project-info">
                                 <div class="p-proj-cont">
-                                    <img src="./images/1-business gear solutions.png" class="proj01" alt="my project">
-                                    <img src="./images/2-business gear solutions.png" class="proj02" alt="my project">
-                                    <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                    <div class="proj-cont" >
+                                        <div class="phover">
+                                            <img src="./images/07.png" class="image-thumbnail" onclick="openModal()">
+                                        </div>
+                                        <div id="imageModal01" class="modal" onclick="closeModal()">
+                                            <div class="modal-content" onclick="event.stopPropagation()">
+                                              <button class="close-btn" onclick="closeModal()">&times;</button>
+                                              <img src="./images/5-business gear solutions.png" alt="Enlarged Image">
+                                            </div>
+                                          </div>
+                                        <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                    </div>
                                 </div>
                                 <div class="p-proj-cont">
-                                    <img src="./images/3.png" class="proj01" alt="my project">
-                                    <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                    <div class="proj-cont" >
+                                        <div class="phover">
+                                            <img src="./images/08.png" class="image-thumbnail" onclick="openModal()">
+                                        </div>
+                                        <div id="imageModal01" class="modal" onclick="closeModal()">
+                                            <div class="modal-content" onclick="event.stopPropagation()">
+                                              <button class="close-btn" onclick="closeModal()">&times;</button>
+                                              <img src="./images/3.png" alt="Enlarged Image">
+                                            </div>
+                                          </div>
+                                        <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                    </div>
                                 </div>
                                 <div class="p-proj-cont">
-                                    <img src="./images/7.png" class="proj02" alt="my project">
-                                    <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                    <div class="proj-cont" >
+                                        <div class="phover">
+                                            <img src="./images/09.png" class="image-thumbnail" onclick="openModal()">
+                                        </div>
+                                        <div id="imageModal01" class="modal" onclick="closeModal()">
+                                            <div class="modal-content" onclick="event.stopPropagation()">
+                                              <button class="close-btn" onclick="closeModal()">&times;</button>
+                                              <img src="./images/7.png" alt="Enlarged Image">
+                                            </div>
+                                          </div>
+                                        <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +223,16 @@
           
             // Function to close the modal
             function closeModal() {
-              document.getElementById("imageModal").style.display = "none";
+              document.getElementById("imageModal", ).style.display = "none";
+            }
+            // Function to open the modal
+            function openModal() {
+              document.getElementById("imageModal01").style.display = "flex";
+            }
+          
+            // Function to close the modal
+            function closeModal() {
+              document.getElementById("imageModal01", ).style.display = "none";
             }
           </script>
 </body>
