--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                   <img src="./images/8-bridge next.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                            <p class="des01">This Home Page Project Design is made for Gym Company in Japan </p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/03.png" class="image-thumbnail" onclick="openModal()">
@@ -81,7 +81,7 @@
                                   <img src="./images/4-artisan.co.ltd.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                            <p class="des01">This Home Page Project Design is made for Recreational Company in Japan </p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/04.png" class="image-thumbnail" onclick="openModal()">
@@ -91,7 +91,7 @@
                                   <img src="./images/6-beemoon.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                            <p class="des01">This Home Page Project Design is made for Restaurant Company in Japan </p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/05.png" class="image-thumbnail" onclick="openModal()">
@@ -101,7 +101,7 @@
                                   <img src="./images/2-SUBPAGE ONLY (Beauty studio melia).png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                            <p class="des01">This Subpage Project Design is made for Beauty Salon Company in Japan </p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/06.png" class="image-thumbnail" onclick="openModal()">
@@ -111,7 +111,7 @@
                                   <img src="./images/9.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                            <p class="des01">This Home Page Project Design is made for Restaurant Company in Japan </p>
                         </div>
                     </div>
                 </div>
@@ -134,43 +134,43 @@
                                 <div class="p-proj-cont">
                                     <div class="proj-cont" >
                                         <div class="phover">
-                                            <img src="./images/07.png" class="image-thumbnail" onclick="openModal()">
+                                            <img src="./images/07.png" class="image-thumbnail" onclick="openModal01()">
                                         </div>
-                                        <div id="imageModal01" class="modal" onclick="closeModal()">
+                                        <div id="imageModal01" class="modal" onclick="closeModal01()">
                                             <div class="modal-content" onclick="event.stopPropagation()">
-                                              <button class="close-btn" onclick="closeModal()">&times;</button>
+                                              <button class="close-btn" onclick="closeModal01()">&times;</button>
                                               <img src="./images/5-business gear solutions.png" alt="Enlarged Image">
                                             </div>
                                           </div>
-                                        <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                        <p class="des01">This is a Landing Page Project Design that is made for IT Company.</p>
                                     </div>
                                 </div>
                                 <div class="p-proj-cont">
                                     <div class="proj-cont" >
                                         <div class="phover">
-                                            <img src="./images/08.png" class="image-thumbnail" onclick="openModal()">
+                                            <img src="./images/08.png" class="image-thumbnail" onclick="openModal01()">
                                         </div>
-                                        <div id="imageModal01" class="modal" onclick="closeModal()">
+                                        <div id="imageModal01" class="modal" onclick="closeModal01()">
                                             <div class="modal-content" onclick="event.stopPropagation()">
-                                              <button class="close-btn" onclick="closeModal()">&times;</button>
+                                              <button class="close-btn" onclick="closeModal01()">&times;</button>
                                               <img src="./images/3.png" alt="Enlarged Image">
                                             </div>
                                           </div>
-                                        <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                        <p class="des01">This Home Page Project Design is made for Luxurious Template that is going to use in one of the client in Japan. <br>the logo is for template purposes only</p>
                                     </div>
                                 </div>
                                 <div class="p-proj-cont">
                                     <div class="proj-cont" >
                                         <div class="phover">
-                                            <img src="./images/09.png" class="image-thumbnail" onclick="openModal()">
+                                            <img src="./images/09.png" class="image-thumbnail" onclick="openModal01()">
                                         </div>
-                                        <div id="imageModal01" class="modal" onclick="closeModal()">
+                                        <div id="imageModal01" class="modal" onclick="closeModal01()">
                                             <div class="modal-content" onclick="event.stopPropagation()">
-                                              <button class="close-btn" onclick="closeModal()">&times;</button>
+                                              <button class="close-btn" onclick="closeModal01()">&times;</button>
                                               <img src="./images/7.png" alt="Enlarged Image">
                                             </div>
                                           </div>
-                                        <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                                        <p class="des01">This Home Page Project Design is made for  Entertainment Industry Template that is going to use in one of the client in Japan. <br>the logo is for template purposes only</p>
                                     </div>
                                 </div>
                             </div>
@@ -226,12 +226,12 @@
               document.getElementById("imageModal", ).style.display = "none";
             }
             // Function to open the modal
-            function openModal() {
+            function openModal01() {
               document.getElementById("imageModal01").style.display = "flex";
             }
           
             // Function to close the modal
-            function closeModal() {
+            function closeModal01() {
               document.getElementById("imageModal01", ).style.display = "none";
             }
           </script>
