--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
                               </div>
                             <p class="des01">This Home Page Project Design is made for Restaurant Company in Japan </p>
                         </div>
+                        <div class="proj-cont" >
+                            <img src="./images/beauty-salon-1.png" class="image-thumbnail" onclick="openModal()">
+                            <div id="imageModal" class="modal" onclick="closeModal()">
+                                <div class="modal-content" onclick="event.stopPropagation()">
+                                  <button class="close-btn" onclick="closeModal()">&times;</button>
+                                  <img src="./images/beauty-salon.png" alt="Enlarged Image">
+                                </div>
+                              </div>
+                            <p class="des01">This Home Page Project Design is made for Restaurant Company in Japan </p>
+                        </div>
                     </div>
                 </div>
 
