--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
             <nav class="header">
                 <ul class="nav-layout">
                     <li class="nav01">
-                        <a href="#">About Me</a>
+                        <a href="#about-content">About Me</a>
                     </li>
                     <li class="nav02">
-                        <a href="#">Projects</a>
+                        <a href="#project-content">Projects</a>
                     </li>
                     <li class="nav03">
-                        <a href="#">Software</a>
+                        <a href="#software-content">Software</a>
                     </li>
                     <li class="nav04">
-                        <a href="#">Contact</a>
+                        <a href="#contact-content">Contact</a>
                     </li>
                 </ul>
             </nav>
     </div>
     <div class="about-section">
         <div class="about-layout">
-            <div class="about-content">
+            <div class="about-content" id="about-content">
                 <img src="./images/profile.png" class="profile-img" alt="profile">
                 <div class="info">
                     <p class="intro01">Hello!</p>
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    <div class="title-project">
+    <div class="title-project" id="project-content">
         <img class="bg-line01" src="./images/bg line.png" alt="">
         <div class="project">
                 <h1 class="title01">Projects</h1>
@@ -176,7 +176,7 @@
             </div>
         </div>
 
-        <div class="title-project">
+        <div class="title-project" id="software-content">
             <img class="bg-line03" src="./images/bg line.png" alt="">
             <div class="software">
                 <h1 class="title01">Software</h1>
@@ -192,7 +192,7 @@
         </div>
 
         <footer>
-            <div class="contact">
+            <div class="contact" id="contact-content">
                 <div class="contact-det">
                     <h1 class="contact-title">Contact</h1>
                     <img class="bg-line04" src="./images/bg line-white.png" alt="">
