--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <img src="./images/beauty-salon.png" alt="Enlarged Image">
                               </div>
                             </div>
-                          <p class="des01">This Home Page Project Design is made for Restaurant Company in Japan </p>
+                          <p class="des01">This Home Page Project Design is made for Beauty Salon Company in Japan </p>
                       </div>
                     </div>
                 </div>
