--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p  class="intro03">Based in Philippines</p>
                     <p class="intro04">I have a degree in Bachelor of Science in Information Technology in City College of Calamba year 2022 and venture my career in the past 2 years in Web Development and more on Web Design in a Japanese IT Company in Makati City. It enhanced my web design skills and pushed me beyond my comfort zone. I also do freelance work in my free time.</p>
                         <div class="btn-resume">
-                            <a href="./resume/PALAROANKristine_Rein_cv.docx" download="Kristine_Rein_Palaroan" class="resume">my resume</a>
+                            <a href="./resume/PALAROANKristine_Rein_cv.pdf" download="Kristine_Rein_Palaroan" class="resume">my resume</a>
                         </div>
                 </div>
             </div>
