--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div id="imageModal" class="modal" onclick="closeModal()">
                                 <div class="modal-content" onclick="event.stopPropagation()">
                                   <button class="close-btn" onclick="closeModal()">&times;</button>
-                                  <img src="./images/6-beemoon.png" alt="Enlarged Image">
+                                  <img src="./images/6.png" alt="Enlarged Image">
                                 </div>
                               </div>
                             <p class="des01">This Home Page Project Design is made for Restaurant Company in Japan </p>
