--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                   <img src="./images/6.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Restaurant Company in Japan </p>
+                            <p class="des01">This Home Page Project Design is made for Fashion and Apparel Company in Japan </p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/05.png" class="image-thumbnail" onclick="openModal()">
