--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                             <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
                         </div>
                         <div class="proj-cont" >
-                            <img src="./images/02.png" class="image-thumbnail" onclick="openModal()">
+                            <img src="./images/2.png" class="image-thumbnail" onclick="openModal()">
                             <div id="imageModal" class="modal" onclick="closeModal()">
                                 <div class="modal-content" onclick="event.stopPropagation()">
                                   <button class="close-btn" onclick="closeModal()">&times;</button>
-                                  <img src="./images/8-bridge next.png" alt="Enlarged Image">
+                                  <img src="./images/02.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Gym Company in Japan </p>
+                            <p class="des01">This Home Page Project Design is made for a Corporate/Recruitment Company in Japan </p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/03.png" class="image-thumbnail" onclick="openModal()">
