--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
                             </div>
                           <p class="des01">This Home Page Project Design is made for Beauty SalonCompany in Japan </p>
                       </div>
+                      <div class="proj-cont" >
+                        <img src="./images/11.png" class="image-thumbnail" onclick="openModal()">
+                        <div id="imageModal" class="modal" onclick="closeModal()">
+                            <div class="modal-content" onclick="event.stopPropagation()">
+                              <button class="close-btn" onclick="closeModal()">&times;</button>
+                              <img src="./images/11.png" alt="Enlarged Image">
+                            </div>
+                          </div>
+                        <p class="des01">This Home Page Project Design is made for Beauty SalonCompany in Japan </p>
+                    </div>
                     </div>
                 </div>
 
