--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                               <img src="./images/11.png" alt="Enlarged Image">
                             </div>
                           </div>
-                        <p class="des01">This Home Page Project Design is made for Educational?Welfare for kids Company in Japan </p>
+                        <p class="des01">This Home Page Project Design is made for Educational/Welfare for kids Company in Japan </p>
                     </div>
                     </div>
                 </div>
