--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                           <p class="des01">This Home Page Project Design is made for Beauty SalonCompany in Japan </p>
                       </div>
                       <div class="proj-cont" >
-                        <img src="./images/11-1.png" class="image-thumbnail" onclick="openModal()">
+                        <img src="./images/11-1 copy.png" class="image-thumbnail" onclick="openModal()">
                         <div id="imageModal" class="modal" onclick="closeModal()">
                             <div class="modal-content" onclick="event.stopPropagation()">
                               <button class="close-btn" onclick="closeModal()">&times;</button>
