--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             </div>
                           <p class="des01">This Home Page Project Design is made for Beauty SalonCompany in Japan </p>
                       </div>
-                      <div class="proj-cont" >
+                      <!-- <div class="proj-cont" >
                         <img src="./images/11-1 copy.png" class="image-thumbnail" onclick="openModal()">
                         <div id="imageModal" class="modal" onclick="closeModal()">
                             <div class="modal-content" onclick="event.stopPropagation()">
@@ -132,7 +132,7 @@
                             </div>
                           </div>
                         <p class="des01">This Home Page Project Design is made for Educational/Welfare for kids Company in Japan </p>
-                    </div>
+                    </div> -->
                     </div>
                 </div>
 
