--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p class="intro01">I'm <b>Kristine Rein</b></p>
                     <h1 class="intro02">I’m a Web Designer</h1>
                     <p  class="intro03">Based in Philippines</p>
-                    <p class="intro04">I have a degree in Bachelor of Science in Information Technology in City College of Calamba year 2022 and venture my career in the past 2 years in Web Development and more on Web Design in a Japanese IT Company in Makati City. It enhanced my web design skills and pushed me beyond my comfort zone. I also do freelance work in my free time.</p>
+                    <p class="intro04">I have a degree in Bachelor of Science in Information Technology in City College of Calamba year 2022 and venture my career for almost 3 years in Web Development and more on Web Design in a Japanese IT Company in Makati City. It enhanced my web design skills and pushed me beyond my comfort zone. I also do freelance work in my free time.</p>
                         <div class="btn-resume">
                             <a href="./resume/PALAROANKristine_Rein_cv.pdf" download="Kristine_Rein_Palaroan" class="resume">my resume</a>
                         </div>
