--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
                 <h1 class="title01">Projects</h1>
                 <div class="proj-des">
                     <div class="project-info">
+                      <div class="proj-cont" >
+                        <img src="./images/14-1.png" class="image-thumbnail" onclick="openModal()">
+                        <div id="imageModal" class="modal" onclick="closeModal()">
+                            <div class="modal-content" onclick="event.stopPropagation()">
+                              <button class="close-btn" onclick="closeModal()">&times;</button>
+                              <img src="./images/14.svg" alt="Enlarged Image">
+                            </div>
+                          </div>
+                        <p class="des01">This homepage design was created for a restaurant in Japan, showcasing a clean and modern layout that reflects the brand’s identity.</p>
+                    </div>
+                      <div class="proj-cont" >
+                          <img src="./images/15-1.png" class="image-thumbnail" onclick="openModal()">
+                          <div id="imageModal" class="modal" onclick="closeModal()">
+                              <div class="modal-content" onclick="event.stopPropagation()">
+                                <button class="close-btn" onclick="closeModal()">&times;</button>
+                                <img src="./images/15.svg" alt="Enlarged Image">
+                              </div>
+                            </div>
+                          <p class="des01">This homepage design was created for a coffee shop in Japan, highlighting a modern and inviting aesthetic.</p>
+                      </div>
                         <div class="proj-cont">
                             <img src="./images/01.png" class="image-thumbnail" onclick="openModal()">
                             <div id="imageModal" class="modal" onclick="closeModal()">
@@ -61,7 +81,7 @@
                                   <img src="./images/1- Kuyabu Trading-01.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Construction Company in Japan </p>
+                            <p class="des01">This homepage design was created for a construction company in Japan, emphasizing a professional and reliable image.</p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/02.png" class="image-thumbnail" onclick="openModal()">
@@ -71,7 +91,7 @@
                                   <img src="./images/2.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for a Corporate/Recruitment Company in Japan </p>
+                            <p class="des01">This homepage design was created for a corporate recruitment company in Japan, presenting a clean and professional image.</p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/03.png" class="image-thumbnail" onclick="openModal()">
@@ -81,7 +101,7 @@
                                   <img src="./images/4-artisan.co.ltd.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Recreational Company in Japan </p>
+                            <p class="des01">This homepage design was created for a recreational company in Japan, showcasing a vibrant and engaging aesthetic.</p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/04.png" class="image-thumbnail" onclick="openModal()">
@@ -91,7 +111,7 @@
                                   <img src="./images/6.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Fashion and Apparel Company in Japan </p>
+                            <p class="des01">This homepage design was created for a fashion and apparel company in Japan, highlighting a modern and stylish aesthetic.</p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/05.png" class="image-thumbnail" onclick="openModal()">
@@ -101,7 +121,7 @@
                                   <img src="./images/2-SUBPAGE ONLY (Beauty studio melia).png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Subpage Project Design is made for Beauty Salon Company in Japan </p>
+                            <p class="des01">This subpage design was created for a beauty salon company in Japan, emphasizing an elegant and welcoming aesthetic.</p>
                         </div>
                         <div class="proj-cont" >
                             <img src="./images/06.png" class="image-thumbnail" onclick="openModal()">
@@ -111,7 +131,7 @@
                                   <img src="./images/9.png" alt="Enlarged Image">
                                 </div>
                               </div>
-                            <p class="des01">This Home Page Project Design is made for Restaurant Company in Japan </p>
+                            <p class="des01">This homepage design was created for a restaurant company in Japan, featuring a clean and inviting layout.</p>
                         </div>
                         <div class="proj-cont" >
                           <img src="./images/beauty-salon-1.png" class="image-thumbnail" onclick="openModal()">
@@ -121,18 +141,10 @@
                                 <img src="./images/beauty-salon.png" alt="Enlarged Image">
                               </div>
                             </div>
-                          <p class="des01">This Home Page Project Design is made for Beauty SalonCompany in Japan </p>
+                          <p class="des01">This homepage design was created for a beauty salon company in Japan, highlighting a modern and elegant style.</p>
                       </div>
-                      <!-- <div class="proj-cont" >
-                        <img src="./images/11-1 copy.png" class="image-thumbnail" onclick="openModal()">
-                        <div id="imageModal" class="modal" onclick="closeModal()">
-                            <div class="modal-content" onclick="event.stopPropagation()">
-                              <button class="close-btn" onclick="closeModal()">&times;</button>
-                              <img src="./images/11.png" alt="Enlarged Image">
-                            </div>
-                          </div>
-                        <p class="des01">This Home Page Project Design is made for Educational/Welfare for kids Company in Japan </p>
-                    </div> -->
+                      
+                      
                     </div>
                 </div>
 
