--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="about-section">
         <div class="about-layout">
             <div class="about-content" id="about-content">
-                <img src="./images/profile.png" class="profile-img" alt="profile">
+                <img src="./images/profile.jpeg" class="profile-img" alt="profile">
                 <div class="info">
                     <p class="intro01">Hello!</p>
                     <p class="intro01">I'm <b>Kristine Rein</b></p>
