--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p class="intro01">I'm <b>Kristine Rein</b></p>
                     <h1 class="intro02">I’m a Web Designer</h1>
                     <p  class="intro03">Based in Philippines</p>
-                    <p class="intro04">I'm a Web Developer and Web Designer with three years of experience building modern, user-focused digital products for a Japanese IT company in Makati. With a BS in Information Technology from City College of Calamba (2022), I specialize in creating clean, responsive, and visually engaging website experiences. I also take on freelance projects, helping businesses enhance their online presence through thoughtful design and efficient development.</p>
+                    <p class="intro04">I'm a Web Designer with three years of experience building modern, user-focused digital products for a Japanese IT company in Makati. With a BS in Information Technology from City College of Calamba (2022), I specialize in creating clean, responsive, and visually engaging website experiences. I also take on freelance projects, helping businesses enhance their online presence through thoughtful design and efficient development.</p>
                         <div class="btn-resume">
                             <a href="./resume/PALAROAN_Kristine_Rein.pdf" download="Kristine_Rein_Palaroan" class="resume">my resume</a>
                         </div>
